# actions-testor

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: blank.yml  deploy.yml  issue_comment.yml  main.yml  matrix.yml  pr.yml  psql.yml  test-and-release.yml  test-pg.yml  test.yml  trigger.yml  workflow.yml
data/: config.json
