[tool.poetry]
name = "testor"
version = "0.1.0"
description = ""
authors = ["lol hi <email@email.com>"]
readme = "README.md"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:tool.poetry.version",
]
branch = "main"
version_source = "commit"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
