[tool.poetry]
name = "testor"
version = "0.1.0"
description = ""
authors = ["lol hi <email@email.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.10.0"

[tool.commitizen]
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
