[tool.poetry]
name = "testor"
version = "0.1.6"
description = "ngvjgccghgc"
authors = ["lol hi <email@email.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.10.0"

[tool.commitizen]
version_provider = "poetry"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
